--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ pair_data/
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+*.zip
 
 # Installer logs
 pip-log.txt
